--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- TITLE -->
     <title>Cash Register FCC</title>
 </head>
 <body>
-    
+    <!-- MAIN CONTAINER -->
+    <div id="main-container">
+        <h1 class="title">Cash Register</h1>
+        <div id="change-due"></div>
+        <!-- INPUT CONTAINER -->
+        <div class="input-container">
+            <label for="cash">Enter cash:</label>
+            <input type="number" id="cash">
+            <button id="purchase-btn">Purchase</button>
+        </div>
+        <!-- END INPUT CONTAINER -->
+
+        <!-- DRAW CONTAINER -->
+        <div class="drawer-container">
+            <div class="price-container">
+                <p id ="price-screen" class="price-screen">total: $1.87</p>
+            </div>
+            <div id="cid-display" class="cid-display">
+                <div class="cid-title">
+                    <h2>Cash in Drawer</h2>
+                </div>
+
+                <div id="cid-money" class="cid-money">
+                    <p>Pennies: $1.01</p>
+                    <p>Nickels: $2.05</p>
+                    <p>Dimes: $3.1</p>
+                    <p>Quarters: $4.25</p>
+                    <p>Ones: $90</p>
+                    <p>Fives: $55</p>
+                    <p>Tens: $20</p>
+                    <p>Twenties: $60</p>
+                    <p>Hundreds: $100</p>
+                </div>
+            </div>
+        </div>
+        <!-- END DRAW CONTAINER -->
+    </div>
+    <!-- END MAIN CONTAINER -->
+
+    <!-- SCRIPT -->
     <script src="script.js"></script>
 </body>
 </html>
